Fixed choosing connect + adding services view

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -61,3 +61,17 @@
   }
 
 }
+
+// .form-init__date::after{
+//   content:'Wybierz datę wylotu';
+//   display: block;
+//   width: 80%;
+//   height: 100%;
+//   background-color: #fff;
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+// }
