Added summary view

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,10 @@
-@import './normalize';
-@import './standarize';
-@import './header';
-@import './form';
-@import './pages';
-@import './seats';
-@import './services';
+@import './normalize',
+ './standarize',
+ './header',
+ './form',
+ './pages',
+ './seats',
+ './services',
+ './summary';
+
 
