--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,11 @@
 .header{
   width: 100vw;
   &__info{
-    margin: 16px 0;
+    margin: 8px 0;
     background-color: rgba(223, 223, 60, 0.678);
+  }
+  &__login{
+    margin: 8px 0;
+    color: white;
   }
 }
