Added Form Init select handlers + fixed types

--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -22,6 +22,10 @@
     height: 3em;
     margin: 1vh 4vw;
   }
+  &__time{
+    height: 3em;
+    margin: 1vh 4vw;
+  }
   &__date{
     height: 3em;
     margin: 1vh 4vw;
