--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -5,7 +5,7 @@
     background-color: rgba(223, 223, 60, 0.678);
   }
   &__login{
-    margin: 8px 0;
+    margin: 8px 0 0 0;
     color: white;
   }
 }
