--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -3,6 +3,9 @@
 body{
   overflow: hidden;
   background: url('../../assets/airport-2373727_1920.jpg');
+  @media (max-width: 767px) and (orientation: landscape) {
+    overflow: visible;
+  }
 }
 
 button{
@@ -27,7 +30,7 @@ button{
   padding-top: 16px;
   width: 100%;
   max-width: 411px;
-  position: fixed;
+  // position: fixed;
   display: flex;
   flex-direction: column;
   background-color: rgba(0%,0%,0%, .5);
@@ -40,13 +43,13 @@ button{
   display: flex;
   justify-content: space-evenly;
   &__line{
-    width: 100%;
+    width: 80%;
     height: 1vh;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     background-color: #fff;
-    z-index: -1;
+    z-index: 1;
   }
 }
 
@@ -59,6 +62,7 @@ button{
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
   &.active{
     background-color: $main-color;
     border: 4px solid white;
@@ -71,6 +75,10 @@ button{
   width: 100vw;
   max-width: 411px;
   background-color: rgba(0%,0%,0%, .5);
+  min-height: 60vh;
+  @media (max-width: 500px) {
+    height: 100%;
+  }
 }
 
 .main__forms{
