--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,10 @@
  './seats',
  './services',
  './summary',
- './bank-modal';
+ './bank-modal',
+ './login-modal',
+ './modal.scss',
+ './spinner.scss';
 
 
 
