--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -5,7 +5,7 @@
   max-width: 411px;
   // height: 576px; // 70%?
   height: 100%;
-  max-height: 476px; // 70%?
+  max-height: 576px; // 70%?
   margin: auto 16px;
   display: flex;
   flex-direction: column;
@@ -17,20 +17,8 @@
 }
 .form-init{
   &__title{
-    margin: 1vh 0;
+    margin: 0;
     text-align: center;
-  }
-  &__place{
-    height: 3em;
-    margin: 1vh 2.5vw;
-  }
-  &__time{
-    height: 3em;
-    margin: 1vh 2.5vw;
-  }
-  &__date{
-    height: 3em;
-    margin: 1vh 2.5vw;
   }
   &__persons{
     display: flex;
@@ -55,9 +43,15 @@
     min-width: 120px;
   }
   &__persons{
+    margin: 0;
+    padding: 1px 2px;
     width: 25%;
     min-width: 40px;
+    max-height: 2em;
     text-align: center;
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
   }
   &__button{
     margin: auto;
