--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -27,13 +27,16 @@ button{
 }
 
 .info{
-  margin-top: 16px;
+  margin-top: 8px;
   width: 100%;
   max-width: 411px;
   // position: fixed;
   display: flex;
   flex-direction: column;
   background-color: rgba(0%,0%,0%, .5);
+  @media(min-width: 500px){
+    margin-top: 16px;
+  }
 }
 
 .stepper{
@@ -77,7 +80,7 @@ button{
   background-color: rgba(0%,0%,0%, .5);
   min-height: 60vh;
   @media (max-width: 500px) { //ustalić optymalną wielkość na innych ekranach
-    height: 100vh;
+    height: 92vh;
   }
 }
 
@@ -86,7 +89,7 @@ button{
   left: 16px;
   padding-left: 16px;
   width: 500%;
-  height: 65%;
+  height: 70%;
   display: flex;
   justify-content: space-between;
   transition: 1s;
