Added new style in app

--- a/src/scss/_login-modal.scss
+++ b/src/scss/_login-modal.scss
@@ -1,15 +1,6 @@
 .login{
-  // position: absolute;
-  // top: 0px;
-  // left: 0;
-  // width: 100vw;
-  // height: 101vh;
-  // background-color: green;
-  // z-index: 1000;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
   &__form{
     padding: auto 16px;
+    max-height: 350px;
   }
 }
