--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,6 @@
 .header{
   width: 100vw;
+  z-index: 10;
   &__info{
     margin: 8px 0;
     background-color: rgba(223, 223, 60, 0.678);
@@ -13,7 +14,3 @@
   }
 }
 
-.login__sign-in{
-  font-weight: bold;
-  cursor: pointer;
-}
