--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -28,7 +28,7 @@ body{
   // position: fixed;
   display: flex;
   flex-direction: column;
-  background-color: rgba(0%,0%,0%, .5);
+  // background-color: rgba(0%,0%,0%, .5);
   @media(min-width: 500px){
     margin-top: 16px;
   }
@@ -68,14 +68,24 @@ body{
 } 
 
 .main{
-  // padding-top: 8px;
   overflow-y: hidden;
-  // width: 100vw;
   max-width: 411px;
-  background-color: rgba(0%,0%,0%, .5);
   height: 75vh;
-  @media (max-width: 500px) { //ustalić optymalną wielkość na innych ekranach
+  z-index: 10;
+  @media (max-width: 568px) { //ustalić optymalną wielkość na innych ekranach
     height: 92vh;
+  }
+  @media (max-height: 500px) {
+    overflow-y: scroll;
+  }
+  &__sign-in{
+    position: absolute;
+    top: 0px;
+    right: 37px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 20;
+    color: $secondary-color;
   }
 }
 
@@ -83,9 +93,7 @@ body{
   position: relative;
   width: 100%;
   height: 75%;
-  // max-height: 100vh;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  min-height: 392px;
   transition: 1s;
+  z-index: 2;
 }
