--- a/src/scss/_standarize.scss
+++ b/src/scss/_standarize.scss
@@ -8,6 +8,16 @@ body{
   height: 100vh;
   position: relative;
   color: white;
+  &::after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    left: 0;
+    width: 100%;
+    height: 110%;
+    background-color: rgba(23, 67, 90, 0.7);
+    z-index: -1;
+  }
 }
 
 input{
