--- a/src/scss/_login-modal.scss
+++ b/src/scss/_login-modal.scss
@@ -5,6 +5,6 @@
     min-width: 60%;
     padding: auto 16px;
     max-height: 350px;
-    visibility: visible !important ;
+    flex-direction: column;
   }
 }
