--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -1,17 +1,32 @@
 @import './variables';
 
 .slider{
+  @media (max-width: 670px){
+    display: none;
+  }
   position: relative;
-  top: -600px;
-  right: -450px;
+  top: -65%;
+  right: -20%;
   width: 70%;
   height: 70%;
   background-color: #fff;
   &__content{
     width: 100%;
     height: 100%;
-    background-image: url('../../assets/slider1.jpg');
     background-size: cover;
+    transition-duration: 1s;
+    &--first{
+      background-image: url('../../assets/slider1.jpg');
+    }
+    &--second{
+      background-image: url('../../assets/slider2.jpg');
+    }
+    &--third{
+      background-image: url('../../assets/slider3.jpg');
+    }
+    &--fourth{
+      background-image: url('../../assets/slider4.jpg');
+    }
   }
   &__stepper{
     margin-top: 8px;
@@ -27,5 +42,16 @@
     height: 20px;
     background-color: $secondary-color;
     border-radius: 50px;
+    &--active{
+      background-color: $input-color;
+    }
+  }
+  &__info{
+    position: absolute;
+    top: 20px;
+    color: $secondary-color;
+    font-size: 60px;
+    font-weight: bold;
+    background-color: rgba(0%,0%,0%, 0.5);
   }
 }
